challenge-flexbox-04/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap');


*,
*::before,
*::after {
    box-sizing: border-box;
    
    padding: 0;
    margin: 0;
}


:root {
    --text-xl: clamp(1.25rem, 3vw,   3.75rem);
    --text-l:  clamp(1.25rem, 3vw,   2.25rem);
    --text-m:  clamp(0.9rem,  2.5vw, 1.3125rem);
    --text-s:  clamp(0.75rem, 2vw,   1.125rem);

    --main-light: #F3EED9;
    --main-dark: #824936;
    --accent-dark: #222C2A;
}


img {
    display: inline-block;
    max-width: 100%;
    margin: 0 auto;
}

header {
    min-height: 80vh;
    background-color: var(--main-light);

    display: flex;
    justify-content: center;
    align-items: center;
}

.header-content {
    max-width: 45rem;

    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;

    text-align: center;
}
 
.header-title {
    width: min(60%, 25rem);
    color: var(--main-dark);

    font-family: 'Playfair Display';
    font-weight: 900;
    font-size: var(--text-xl);
}


.header-description {
    font-family: 'Roboto';
    font-weight: 300;
    font-size: var(--text-s);

    text-transform: uppercase;
    letter-spacing: 0.5em;
}


main {
    max-width: 70.5rem;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}


article {
    padding: clamp(2em, 1.5vw, 5em);

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 3em;
}

.article-header {
    color: var(--main-dark);

    font-family: 'Playfair Display';
    font-weight: 900;
    font-size: var(--text-l);
    text-align: center;
}

.article-text {
    font-family: 'Roboto';
    font-size: var(--text-m);

    display: flex;
    flex-direction: column;
    gap: 2em;
}

.additional-item {
    padding: 
        clamp(1em, 3vw, 4em)
        clamp(3em, 3vw, 8em);
    
    color: white;

    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1em;
}

.additional-item--one {
    background-color: var(--accent-dark);
}

.additional-item--two {
    background-color: var(--main-dark);

}

.additional-item--title {
    margin-bottom: 0.75em;
    
    font-family: 'Playfair Display';
    font-weight: 900;
    font-size: var(--text-m);
    text-align: center;
}

.additional-item--description {
    font-family: 'Roboto';
    font-size: var(--text-m);
} 


.additional-item--image {
    flex: 1 1;
}


@media screen and (min-width: 45rem) {
    .article-text {
        flex-direction: row;
        gap: 3em;
    }

    .additional-item--one {
        flex-direction: row;
    }

    .additional-item--two {
        flex-direction: row-reverse;
    }
}

